# VarKeep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
scripts/: check-script-ast.ps1  generate-third-party-licenses.ps1  package-release.ps1  verify-package.ps1  verify-release-tag.ps1  verify-release.ps1  verify-v1.ps1  verify.ps1
v1/: README.md  backup-env.ps1  start-interactive.cmd
v1/tests/: run-tests.ps1
v2/: Cargo.toml  README.md  THIRD-PARTY-LICENSES.txt  THIRD-PARTY-NOTICES.md  build.rs  rust-toolchain.toml
v2/design/backup-artifacts/: summary-preview.md
v2/design/branding/: index.html
v2/src/: app.rs  domain.rs  lib.rs  main.rs  privacy.rs  storage.rs  summary.rs  ui_adapter.rs  windows.rs
v2/ui/: app.slint
